syntax = "proto3";
package telemetry;
option go_package = "github.com/Abdullah007noman/My-Distributed-System/proto";

message SensorReading {
  string sensor_id = 1;
  int64 ts_unix_ms = 2;
  string site = 3;
  double temperature = 4;
  double humidity = 5;
  uint64 seq = 6;
}

message IngestAck { uint64 last_seq = 1; }

service Ingestion {
  rpc StreamReadings(stream SensorReading) returns (IngestAck);
}

message QueryRequest { string sensor_id = 1; int64 start_ms = 2; int64 end_ms = 3; }
message QueryPoint   { int64 ts_unix_ms = 1; double temperature = 2; double humidity = 3; }
message QueryReply   { repeated QueryPoint points = 1; }

service QueryAPI {
  rpc Range(QueryRequest) returns (QueryReply);
}
